Classifier geändert zu KI Model da probleme mit Embedding classifier

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -65,6 +65,8 @@ mit Javascript beliebige Variationen von der Klasse Message darstellen. !}
   const uiService = new UIService();
   const input = document.getElementById('input');
   const clear = document.getElementById('clear');
+  {#insert services}
+  {/}
 
   window.onload = function() {
     uiService.loadDarkMode();
