--- a/src/main/resources/META-INF/resources/styles/style.css
+++ b/src/main/resources/META-INF/resources/styles/style.css
@@ -344,6 +344,11 @@ code {
   gap: 10px;
 }
 
+.right-tools{
+  display: flex;
+  gap: 10px;
+}
+
 .options{
   display: flex;
   gap: 10px;
@@ -371,6 +376,51 @@ code {
   align-items: center;
   gap: 20px;
 }
+
+#user-popup{
+  color: black;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: rgb(194, 194, 194, 0.5);
+}
+
+.user-popup-input-container{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  gap: 10px;
+
+}
+
+#close-user-popup{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
+
+.selected-lecture{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 10px;
+  width: fit-content;
+  border-radius: 30px;
+  background-color: #4A90E2;
+  color: #fff;
+}
+
+.remove-lecture{
+  cursor: pointer;
+}
+
 
 
 
