--- a/src/main/resources/META-INF/resources/styles/style.css
+++ b/src/main/resources/META-INF/resources/styles/style.css
@@ -512,6 +512,53 @@ code {
   transition: all 0.3s ease;
 }
 
+#score-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  color: black;
+}
+
+.score-field{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 100%;
+  height: 35px;
+}
+
+.score-name{
+  text-align: left;
+  width: 50%;
+  padding: 4px;
+  border-radius: 5px;
+  border: none;
+  font-size: 16px;
+}
+
+.progressbar-container{
+  display: flex;
+  align-items: start;
+  justify-content: start;
+  gap: 10px;
+  width: 100%;
+  background-color: white;
+  border-radius: 5px;
+}
+
+.progressbar{
+  text-align: end;
+  width: 80%;
+  padding: 4px;
+  border-radius: 5px;
+  border: none;
+  font-size: 16px;
+  background-color: #0f9384;
+}
+
 
 
 
