KI Modell auf llama 3 gewechselt + docker für hochschule hinzugefügt + cleanup in chat.html

--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -178,6 +178,7 @@ mit Javascript beliebige Variationen von der Klasse Message darstellen. !}
   // Eventlistener für save button
   document.getElementById('save-user').addEventListener('click', function() {
     studentService.updateStudentData();
+    uiService.addStudentScoresToUI(personalId, studentService);
     uiService.userPopUp();
   });
 
