oberfläche angepasst und weitere tests geschrieben

--- a/src/main/resources/META-INF/resources/styles/mcStyle.css
+++ b/src/main/resources/META-INF/resources/styles/mcStyle.css
@@ -130,3 +130,11 @@
     width: 15px;
     margin-inline: 2px;
 }
+
+.quiz-end-buttons{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
